Colaboratory를 통해 생성됨

--- a/3주차_과제_인공지능사관학교_양창원.ipynb
+++ b/3주차_과제_인공지능사관학교_양창원.ipynb
@@ -285,7 +285,7 @@
         "  return cost\n",
         "  W = int(input())\n",
         "\n",
-        "cost_func(10, x, y)"
+        "cost_func(10, x, y) # 가중치(W)가 10일 때의 코스트(cost)값을 구하는 함수식"
       ],
       "execution_count": 0,
       "outputs": [
