--- a/3주차_과제_인공지능사관학교_양창원.ipynb
+++ b/3주차_과제_인공지능사관학교_양창원.ipynb
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "LT3q8ACK4ezT",
         "colab_type": "code",
-        "outputId": "1a4833ac-27e7-4a9d-a871-cd2c5ea94376",
+        "outputId": "9e88a48d-a990-4773-ba13-9fa90cce0a36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -278,16 +278,16 @@
         "# W:가중치, x:학습 데이터 y:정답 데이터\n",
         "\n",
         "def cost_func(W, x, y):\n",
-        "  z = 0\n",
-        "  for n in range(0, len(x)):\n",
-        "    z += (W*x[n] - y[n])**2\n",
-        "  cost = float(z/len(x))\n",
+        "  z = 0 # 코스트 함수 중 시그마 초기 값\n",
+        "  for n in range(0, len(x)): # x, y값을 순차적으로 대입\n",
+        "    z += (W*x[n] - y[n])**2 # 코스트 함수 중 시그마 값 구하기\n",
+        "  cost = float(z/len(x)) # 시그마 값 / 데이터 개수 구하기\n",
         "  return cost\n",
-        "  W = int(input())\n",
+        "  W = int(input()) # 가중치 입력\n",
         "\n",
         "cost_func(10, x, y) # 가중치(W)가 10일 때의 코스트(cost)값을 구하는 함수식"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +299,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 60
+          "execution_count": 6
         }
       ]
     },
